frontend/src/assets/styles/basics/_layout.scss
.main-layout {
    overflow: hidden;
    // position: absolute;
  margin: 0;
  height: 100vh;
  min-width: 100vw;
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: auto 1fr;
  grid-template-areas:
    'sidebar header'
    'sidebar details';
  .side-bars {
    grid-area: sidebar;
    height: 100vh;
    width: 100%;
    overflow: hidden;
  }

  .header {
    position: sticky;
    grid-area: header;
    height: 100%;
    width: 100%;
    overflow: hidden;
  }

  .details {
    grid-area: details;
    // height: 100%;
    // width: 100%;
    overflow: scroll;
  }
}
// .container {
//   max-width: 1500px;
//   padding: 10px;
// }
// .main-container {
//   display: grid;
//   grid-template-columns: 20px 1fr 20px;

//   > * {
//     grid-column: 2;

//     &.full {
//       grid-column: 1 /-1;
//     }
//   }

  // @include for-narrow-layout {
//     grid-template-columns:
//       minmax(20px, 1fr)
//       minmax(auto, $mobile-breakpoint)
//       minmax(20px, 1fr);
//   }
//   @include for-normal-layout {
//     grid-template-columns:
//       minmax(20px, 1fr)
//       minmax(auto, $narrow-breakpoint)
//       minmax(20px, 1fr);
//   }
//   @include for-wide-layout {
//     grid-template-columns:
//       minmax(20px, 1fr)
//       minmax(auto, $normal-breakpoint)
//       minmax(20px, 1fr);
//   }
// }

.card-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 20px;
}

